big push, files updated to prep for user implementation
