# backend/api/openapi.yaml
@@ -15,6 +15,7 @@ paths:
   /listings:
     get:
       description: Gets all listings
+      security: []
       parameters:
       - name: search
         in: query
@@ -39,6 +40,7 @@ paths:
   /listings/category:
     get:
       description: Gets all categories
+      security: []
       parameters:
       - name: sub
         in: query
@@ -56,6 +58,7 @@ paths:
   /listings/{category}:
     get:
       description: Gets listings from category
+      security: []
       parameters:
       - name: category
         in: path
@@ -82,6 +85,7 @@ paths:
   /member:
     get:
       description: Gets users
+      security: []
       parameters:
       - name: user
         in: query
@@ -141,3 +145,7 @@ components:
       required:
         - id
         - member
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
